# 2D-game

./: README.md
src/: CMakeLists.txt  main.cpp
src/Graphics/: Color.h  Drawable.h  EntityManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  Window.cpp  Window.h  renderFunctions.cpp  renderFunctions.h
src/Libraries/: Clock.cpp  Clock.h  List.h  Range.h  geometry.h  utility.h
src/Math/: CircleFunction.h  LineFunction.h  Point.h  Vector.h
src/Others/: Axis.h  Camera.cpp  Camera.h  Error.cpp  Error.h  Status.h  config.h.in
src/Shaders/: colorFragment.glsl  colorVertex.glsl  textureAndColorFragment.glsl  textureAndColorVertex.glsl  textureFragment.glsl  textureVertex.glsl
src/Shapes/: Circle.cpp  Circle.h  Entities.cpp  Entities.h  EntitiesTemp.cpp  EntitiesTemp.h  Rectangle.cpp  Rectangle.h  Specialized.h
src/Shapes/Complex/: Arrow.cpp  Arrow.h  Background.cpp  Background.h  Ball.cpp  Ball.h
src/Shapes/Sub/: Base.cpp  Base.h  Drag.cpp  Drag.h  Springiness.cpp  Springiness.h  Velocity.cpp  Velocity.h
src/Ui/: Level.cpp  Level.h  LevelCreator.cpp  LevelCreator.h  LevelCreator.ui  LevelCreatorLauncher.cpp  LevelCreatorLauncher.h  LevelCreatorLauncher.ui  LevelLauncher.cpp  LevelLauncher.h  LevelLauncher.ui  MainMenu.cpp  MainMenu.h  MainMenu.ui  ResizableQWidget.cpp  ResizableQWidget.h  Settings.cpp  Settings.h  Settings.ui  WidgetPosition.cpp  WidgetPosition.h
src/Xml/: Base.cpp  Base.h  Level.cpp  Level.h  Settings.cpp  Settings.h  levels.xml  settings.xml
